<resources>
    <string name="app_name">爱车速查</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="txt_wx_pay_fail">支付失败</string>
    <string name="txt_wx_pay_cancel">支付取消</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="load_more">正在加载中</string>
    <string name="load_no_more">没有更多数据了</string>
    <string name="txt_privacy_policy_login"><Data><![CDATA[登录即代表同意<font color="#FF5959">隐私条款</font>]]></Data></string>
    <string name="txt_privacy_policy_user">隐私政策</string>
    <string name="txt_login_for_enterprise">企业版登录</string>
    <string name="txt_login_for_user">个人版登录</string>
    <string name="txt_account_hint">请输入账号/手机号/设备号</string>
    <string name="txt_password_hint">请输入密码</string>
    <string name="txt_remember_password">记住密码</string>
    <string name="txt_forget_password">忘记密码?</string>
    <string name="txt_login">登录</string>
    <string name="txt_register_hint"><Data><![CDATA[还没有账号，<font color="#00B4B7">立即注册</font>]]></Data></string>
    <string name="txt_login_success">登录成功</string>
    <string name="txt_register">注册</string>
    <string name="txt_retrieve_password">找回密码</string>
    <string name="txt_app_name_hint">零距离在线汽车在线</string>
    <string name="txt_input_account_hint">请输入账号</string>
    <string name="txt_input_account_hint_cn">请输入账号(选填)</string>
    <string name="txt_input_account_error">账号最多15位</string>
    <string name="txt_input_phone_hint">请输入手机号(必填)</string>
    <string name="txt_input_code_hint">请输入验证码</string>
    <string name="txt_send_code">获取验证码</string>
    <string name="txt_input_email">请输入邮箱(选填)</string>
    <string name="txt_input_password">请输入密码</string>
    <string name="txt_input_password_confirm">请再次输入密码</string>
    <string name="txt_tip_regist">注册后可用账号或设备号登录</string>
    <string name="txt_home">首页</string>
    <string name="txt_location">定位</string>
    <string name="txt_data_center">数据中心</string>
    <string name="txt_mine">系统</string>
    <string name="txt_tip">提示</string>
    <string name="write_permission_request">请开启读写文件权限</string>
    <string name="txt_setting">设置</string>
    <string name="txt_notify_msg">当前应用缺少必要权限。请点击 设置 - 权限管理 -打开所需权限。</string>
    <string name="txt_exit_app">再按一次退出</string>
    <string name="txt_device_list">设备列表</string>
    <string name="txt_alarm_record">报警记录</string>
    <string name="txt_offline_statistics">离线统计</string>
    <string name="txt_parking_report">停车报表</string>
    <string name="txt_traffic_statistics">行车统计</string>
    <string name="txt_stay_often">经常停留点</string>
    <string name="txt_remaining_battery">剩余电量</string>
    <string name="txt_mileage_report">里程报表</string>
    <string name="txt_total_mileage_report">总里程报表</string>
    <string name="txt_command_query">指令查询</string>
    <string name="txt_operation_record">操作记录</string>
    <string name="txt_alert_msg">报警消息</string>
    <string name="txt_history_track">历史轨迹</string>
    <string name="txt_sys_set">系统设置</string>
    <string name="txt_my_purse">我的钱包</string>
    <string name="txt_news_push">消息推送</string>
    <string name="txt_change_password">修改密码</string>
    <string name="txt_user_management">用户管理</string>
    <string name="txt_device_management">设备管理</string>
    <string name="txt_switch_device_icon">切换图标</string>
    <string name="txt_reset_device">恢复出厂设置</string>
    <string name="txt_sign_out">退出登录</string>
    <string name="txt_input_imei_hint">请输入IMEI号或设备名称</string>
    <string name="txt_search">搜索</string>
    <string name="txt_alarm_time">报警时间：</string>
    <string name="txt_alarm_address">报警地址：</string>
    <string name="txt_main_function">主要功能</string>
    <string name="txt_function_sim">流量卡</string>
    <string name="txt_function_record">录音功能</string>
    <string name="txt_function_fence">围栏设置</string>
    <string name="txt_function_detail">详情</string>
    <string name="txt_function_navigation">导航</string>
    <string name="txt_function_remote_switch">远程开关</string>
    <string name="txt_function_location_mode">定位模式</string>
    <string name="txt_function_operation_record">操作记录</string>
    <string name="txt_function_mileage_statistics">里程统计</string>
    <string name="txt_function_remote_listening">远程听音</string>
    <string name="txt_function_oil_and_electricity_control">油电控制</string>
    <string name="txt_function_realtime_tracking">实时追踪</string>
    <string name="txt_function_one_click_restart">一键重启</string>
    <string name="txt_function_one_key_sleep">一键休眠</string>
    <string name="txt_function_fault_self_check">故障自检</string>
    <string name="txt_input_sim_number">请输入流量卡号</string>
    <string name="txt_request">查询</string>
    <string name="txt_function">功能</string>
    <string name="txt_alarm_message">报警消息</string>
    <string name="txt_remaining">剩余流量</string>
    <string name="txt_flow_unit">M</string>
    <string name="txt_sms_unit">条</string>
    <string name="txt_flow_total">总流量</string>
    <string name="txt_flow_use">已用流量</string>
    <string name="txt_status">状态：</string>
    <string name="txt_balance">余额：</string>
    <string name="txt_sms_total">短信总量：</string>
    <string name="txt_sms_use">已用短信：</string>
    <string name="txt_sms_surplus">剩余短信：</string>
    <string name="txt_sim_status">SIM卡状态：</string>
    <string name="txt_iccid_number">ICCID号：</string>
    <string name="txt_sim_number">SIM卡号：</string>
    <string name="txt_activation_time">激活时间：</string>
    <string name="txt_expire_date">到期时间：</string>
    <string name="txt_go_recharge">去充值</string>
    <string name="txt_sim_hint">温馨提示：超出套餐流量和短信会停用哦</string>
    <string name="txt_automatic_recording">自动录音</string>
    <string name="txt_delete_all">删除全部</string>
    <string name="txt_is_delete_record">是否删除录音？</string>
    <string name="txt_is_delete_all_record">是否删除全部录音？</string>
    <string name="txt_edit">编辑</string>
    <string name="txt_select_all">全选</string>
    <string name="txt_select_all_cancel">取消全选</string>
    <string name="txt_delete">删除</string>
    <string name="txt_start_recording">开始录音</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_save">保存</string>
    <string name="txt_confirm">确定</string>
    <string name="txt_save_success">保存成功</string>
    <string name="txt_device_name">设备名称：</string>
    <string name="txt_device_account">设备账号：</string>
    <string name="txt_device_type">设备型号：</string>
    <string name="txt_device_status">设备状态：</string>
    <string name="txt_location_time">定位时间：</string>
    <string name="txt_long_copy">(点击复制)</string>
    <string name="txt_lat_lon">经纬度：</string>
    <string name="txt_opening_time">开通时间：</string>
    <string name="txt_contact_person">联系人：</string>
    <string name="txt_contact_number">联系电话：</string>
    <string name="txt_iccid">ICCID号：</string>
    <string name="txt_address">地址：</string>
    <string name="txt_location_address">定位地址：</string>
    <string name="txt_center_mobile">中心号码：</string>
    <string name="txt_device_detail">设备详情</string>
    <string name="txt_account">账号：</string>
    <string name="txt_name">名称：</string>
    <string name="txt_time">时间：</string>
    <string name="txt_remark">备注：</string>
    <string name="txt_location_mode_error">实时定位</string>
    <string name="txt_location_mode_1">常用模式</string>
    <string name="txt_location_mode_2">周期定位模式</string>
    <string name="txt_location_mode_3">智能省电模式</string>
    <string name="txt_location_mode_4">超级省电模式</string>
    <string name="txt_location_mode_6">睡眠模式</string>
    <string name="txt_location_mode_7">省电模式</string>
    <string name="txt_location_mode_8">超级省电模式</string>
    <string name="location_mode_hint_1">设备在线和静止后保持与服务器通信，使用时间较短</string>
    <string name="location_mode_hint_2">设备仅在设置的时间点每天与服务器通信一次,发送定位数据,通信完成后进入待机模式,与服务器断开连接</string>
    <string name="location_mode_hint_3">按设置的时间周期上报定位数据，其他时间断网。静止状态每小时上报一次定位数据。休眠后不可录音、唤醒</string>
    <string name="location_mode_hint_4">设置后长期断网，只能通过光感脱落唤醒、手机开机、发短信这三种模式唤醒，休眠期间客户端控制不了设备</string>
    <string name="location_mode_hint_6">该模式下不能录音，仅在设定时间启动定位</string>
    <string name="location_mode_hint_7">根据选择时间来更新定位时间，选择时间越长越省电，但会影响历史轨迹的精准度</string>
    <string name="location_mode_hint_8">仅在登录APP首页地图界面时定位，30秒更新一次定位，离开首页地图界面或退出APP时关闭定位，此模式无历史轨迹</string>
    <string name="txt_set_prompt">谨慎使用此模式，此模式仅在设定时间启动定位，其它时间设备会离线，同时不能操作录音，无历史轨迹，无报警信息。 \n设置后恢复方式步骤:\n1.先把定位模式设置到常用模式;\n2.远程开机或重新插卡开机。</string>
    <string name="txt_super_call_the_roll_mode_prompt">仅在登录APP首页地图界面时定位，30秒更新一次定位，离开首页地图界面或退出APP时关闭定位，此模式无历史轨迹，确认要切换超级省电模式？</string>
    <string name="txt_call_the_roll_mode_prompt">仅在登录APP首页地图界面时定位，30秒更新一次定位，离开首页地图界面或退出APP时关闭定位，此模式无历史轨迹，确认要切换省电模式？</string>
    <string name="txt_sup_save_power_hint">开启超级省电模式设备会断开网络</string>
    <string name="txt_total_mileage">总里程</string>
    <string name="txt_unit_mileage">km</string>
    <string name="txt_unit_number">次</string>
    <string name="txt_alarm_number">报警次数</string>
    <string name="txt_alarm_speed_number">超速次数</string>
    <string name="txt_start_time">开始时间</string>
    <string name="txt_end_time">结束时间</string>
    <string name="txt_target_name">目标名称：</string>
    <string name="txt_password_setting">密码设置</string>
    <string name="txt_oil_restore">恢复油电</string>
    <string name="txt_oil_disconnect">断开油电</string>
    <string name="txt_electric_fence">电子围栏</string>
    <string name="txt_alarm">报警：</string>
    <string name="txt_input_device_number">请输入设备上的卡号</string>
    <string name="txt_remote_switch_hint">如长时间不使用可远程关机，关机后设备待机更久，但不更新位置信息，请谨慎操作！</string>
    <string name="txt_boot_up">开机</string>
    <string name="txt_shutdown">关机</string>
    <string name="txt_on_off_timer">定时开关</string>
    <string name="txt_on_off_timer_hint">可以根据您选择的时间开机和关机</string>
    <string name="txt_time_switch_other_hint">睡眠模式下，定时开关功能不生效，如需开启定时开关，请切换至其他定位模式</string>
    <string name="txt_every_day">每天</string>
    <string name="txt_every_month">每月</string>
    <string name="txt_current_month">当月</string>
    <string name="txt_boot_time">开机时间</string>
    <string name="txt_shutdown_time">关机时间</string>
    <string name="txt_device_icon">设备图标</string>
    <string name="txt_device_car_0">汽车</string>
    <string name="txt_device_car_1">货车</string>
    <string name="txt_device_car_2">电动车</string>
    <string name="txt_device_car_3">人</string>
    <string name="txt_device_car_4">宠物</string>
    <string name="txt_over_speed_alarm_hint">超速报警区间为10~190</string>
    <string name="txt_alarm_switch">报警开关</string>
    <string name="txt_shake_alarm">震动报警</string>
    <string name="txt_over_speed_alarm">超速报警</string>
    <string name="txt_offline_alarm">离线报警</string>
    <string name="txt_shutdown_alarm">关机报警</string>
    <string name="txt_reboot_alarm">启动报警</string>
    <string name="txt_fence_alarm_out">围栏报警(出)</string>
    <string name="txt_fence_alarm_in">围栏报警(进)</string>
    <string name="txt_fence_alarm_on_out">围栏报警(进出)</string>
    <string name="txt_delete_over_speed_alarm">解除超速报警</string>
    <string name="txt_defence_alarm">防拆报警</string>
    <string name="txt_low_power_alarm">低电报警</string>
    <string name="txt_remove_low_power_alarm">解除低电报警</string>
    <string name="txt_device_off_alarm">设备脱落报警</string>
    <string name="txt_device_off_alarm_set">脱落报警</string>
    <string name="txt_device_alarm">设备复位报警</string>
    <string name="txt_device_recovery_alarm">设备恢复报警</string>
    <string name="txt_unkown">未知警告</string>
    <string name="txt_invalid_open">非法开门报警</string>
    <string name="txt_invalid_reboot">非法启动报警</string>
    <string name="txt_low_power_alarm_ex">设备低电量报警(达到即将关机的阈值)</string>
    <string name="txt_sence_alarm">灵敏度报警</string>
    <string name="txt_recharge">充值</string>
    <string name="txt_bind_error">该手机号已绑定设备\n1、解绑设备，并绑定新的设备\n2、注册账号，添加设备</string>
    <string name="txt_unbind">解绑</string>
</resources>