<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_ffffff_10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/color_333333"
        android:text="@string/txt_bind_error"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_31"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_40">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/dp_72"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_666666"
            android:gravity="center"
            android:background="@drawable/bg_ffffff_2_3"
            android:text="@string/txt_cancel"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="@dimen/dp_72"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_00A7FF"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@drawable/bg_00b4b7_2"
            android:text="@string/txt_register"/>

        <Button
            android:id="@+id/btn_unbind"
            android:layout_width="@dimen/dp_72"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_FFFFFF"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:background="@drawable/bg_00b4b7_4"
            android:text="@string/txt_unbind"/>
    </RelativeLayout>
</LinearLayout>